--- a/Proyecto/Estilos/cabecera.css
+++ b/Proyecto/Estilos/cabecera.css
@@ -1,5 +1,4 @@
 *{
-
     margin: 0; /* Margen*/
     top: 0; /* Margen de arriba*/
     left: 0; /* Margen de la derecha*/
@@ -31,6 +30,10 @@
    
     top: 0;
 }
+.titulo3
+{
+   color: #FFF;
+}
 
 .img1 {
 
@@ -39,4 +42,3 @@
     position: absolute;
    
 }
-
